Fixed navbar on default page so it it aligns with container

--- a/css/custom_CJT.css
+++ b/css/custom_CJT.css
@@ -9,19 +9,30 @@ body {
 
 /* Landing Page header styling */
 
-.landing {
+.landing, .site-header  {
     background: linear-gradient(
             rgba(50, 0, 0, 0.25),
             rgba(50, 0, 0, 0.25)),
     url('../images/revel-20.jpg') top center no-repeat;
     background-size: cover;
-    min-height: 880px;
-
-    /*height: 100vh;
-  */
     background-attachment: fixed;
 
+
 }
+
+.landing {
+    /*height: 100vh;*/
+    min-height: 880px;
+
+
+}
+
+
+.site-header {
+    height: 6.5rem;     
+    
+}
+
 
 .landing hr.hr_style1 {
     border-top: 3px solid #fff;
