--- a/css/skin-default.css
+++ b/css/skin-default.css
@@ -1,4 +1,3 @@
-.skin-default .navbar,
 .has-docked-nav .navbar {
     background: linear-gradient(
             rgba(0, 0, 0, 0.25),
@@ -8,4 +7,3 @@
 	width: 100%;
     background-attachment: fixed;
 }
-
